[gd_scene load_steps=11 format=2]

[ext_resource path="res://skins/angry dude skin.png" type="Texture" id=1]
[ext_resource path="res://code/mech.gd" type="Script" id=2]
[ext_resource path="res://scenes/fire effect.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Chisel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/spread cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/thruster.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/auto turret.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/cannon.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/circular gradient.png" type="Texture" id=20]

[sub_resource type="CircleShape2D" id=1]
radius = 30.4331

[node name="mech" type="KinematicBody2D"]
light_mask = 0
position = Vector2( 0.402, 0 )
collision_mask = 18
script = ExtResource( 2 )

[node name="color" type="Node2D" parent="."]
light_mask = 0

[node name="circle" type="Sprite" parent="color"]
light_mask = 0
z_index = 2
texture = ExtResource( 1 )
offset = Vector2( -0.0498127, -1.812 )

[node name="Chisel" parent="color" groups=[
"Chisels",
] instance=ExtResource( 4 )]
position = Vector2( 1.9479, -21.2174 )

[node name="Chisel2" parent="color" groups=[
"Chisels",
] instance=ExtResource( 4 )]
visible = false
position = Vector2( -19.5129, 1.27239 )
rotation = 3.14159

[node name="Chisel3" parent="color" groups=[
"Chisels",
] instance=ExtResource( 4 )]
visible = false
position = Vector2( -18.7371, 15.8327 )
rotation = 2.35619

[node name="spread cannon" parent="color" groups=[
"guns",
] instance=ExtResource( 5 )]
visible = false
position = Vector2( 0.158667, -27.4603 )
reload = 1.4
spread = 45.0

[node name="spread cannon2" parent="color" groups=[
"guns",
] instance=ExtResource( 5 )]
visible = false
position = Vector2( -0.77681, 25.9351 )

[node name="Chisel4" parent="color" groups=[
"Chisels",
] instance=ExtResource( 4 )]
visible = false
position = Vector2( 16.8065, -17.8937 )
rotation = -0.785398

[node name="auto turret" parent="color" groups=[
"guns",
] instance=ExtResource( 7 )]
visible = false
position = Vector2( -1.44452, 27.4854 )
rotation = 1.58793
scale = Vector2( 1.4, 1.4 )

[node name="auto turret2" parent="color" groups=[
"guns",
] instance=ExtResource( 7 )]
visible = false
position = Vector2( 24.3164, 158.13 )

[node name="auto turret3" parent="color" groups=[
"guns",
] instance=ExtResource( 7 )]
visible = false
position = Vector2( 64.0505, 128.717 )

[node name="cannon" parent="color" groups=[
"guns",
] instance=ExtResource( 8 )]
visible = false
position = Vector2( 16.1468, -11.6977 )
scale = Vector2( 2, 1.3 )

[node name="cannon2" parent="color" groups=[
"guns",
] instance=ExtResource( 8 )]
visible = false
position = Vector2( 15.6975, 12.673 )
scale = Vector2( 2, 1.3 )

[node name="thruster" parent="color" instance=ExtResource( 6 )]
visible = false
position = Vector2( -19.7913, 1.31378 )
force = 15

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="color/thruster"]
light_mask = 0
remote_path = NodePath("../../fire")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="hunger timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="health timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="fire" parent="." instance=ExtResource( 3 )]
light_mask = 0
position = Vector2( -19.9018, 2.19351 )
scale = Vector2( 3, 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 20 )
texture_scale = 11.0
color = Color( 1, 0.588235, 0, 1 )
shadow_enabled = true
[connection signal="coal" from="color/Chisel" to="." method="_on_Chisel_coal"]
[connection signal="daimond" from="color/Chisel" to="." method="_on_Chisel_daimond"]
[connection signal="iron" from="color/Chisel" to="." method="_on_Chisel_iron"]
[connection signal="stone" from="color/Chisel" to="." method="_on_Chisel_stone"]
[connection signal="coal" from="color/Chisel2" to="." method="_on_Chisel_coal"]
[connection signal="daimond" from="color/Chisel2" to="." method="_on_Chisel_daimond"]
[connection signal="iron" from="color/Chisel2" to="." method="_on_Chisel_iron"]
[connection signal="stone" from="color/Chisel2" to="." method="_on_Chisel_stone"]
[connection signal="coal" from="color/Chisel3" to="." method="_on_Chisel_coal"]
[connection signal="daimond" from="color/Chisel3" to="." method="_on_Chisel_daimond"]
[connection signal="iron" from="color/Chisel3" to="." method="_on_Chisel_iron"]
[connection signal="stone" from="color/Chisel3" to="." method="_on_Chisel_stone"]
[connection signal="coal" from="color/Chisel4" to="." method="_on_Chisel_coal"]
[connection signal="daimond" from="color/Chisel4" to="." method="_on_Chisel_daimond"]
[connection signal="iron" from="color/Chisel4" to="." method="_on_Chisel_iron"]
[connection signal="stone" from="color/Chisel4" to="." method="_on_Chisel_stone"]
[connection signal="timeout" from="hunger timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="health timer" to="." method="_on_health_timer_timeout"]
